--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.vscode/launch.json
+.vscode/settings.json
 
 # dotenv environment variable files
 .env
@@ -54,3 +56,15 @@ pids
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
+
+# Yarn setup
+.yarn
+.pnp.cjs
+.pnp.loader.mjs
+yarn.lock
+
+# Database migrations
+migrations/*
+
+# Cert
+src/cert/*
