--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "test:cov": "cross-env NODE_ENV=test jest --coverage",
     "test:debug": "cross-env NODE_ENV=test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cross-env NODE_ENV=test jest --config ./test/jest-e2e.json --maxWorkers=1",
-    "migration:generate": "cross-env NODE_ENV=development ts-node node_modules/.bin/typeorm migration:generate -d src/ormconfig.ts migrations/$npm_config_name",
-    "migration:run": "cross-env NODE_ENV=development ts-node node_modules/.bin/typeorm migration:run -d src/ormconfig.ts",
-    "migration:revert": "cross-env NODE_ENV=development ts-node node_modules/.bin/typeorm migration:revert -d src/ormconfig.ts"
+    "migration:generate": "cross-env NODE_ENV=development typeorm-ts-node-commonjs migration:generate -d src/ormconfig.ts migrations/$npm_config_name",
+    "migration:run": "cross-env NODE_ENV=development typeorm-ts-node-commonjs migration:run -d src/ormconfig.ts",
+    "migration:revert": "cross-env NODE_ENV=development typeorm-ts-node-commonjs migration:revert -d src/ormconfig.ts"
   },
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
@@ -32,6 +32,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/lodash": "^4.17.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
@@ -61,6 +62,7 @@
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
     "source-map-support": "^0.5.21",
