--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "migration:revert": "cross-env NODE_ENV=development typeorm-ts-node-commonjs migration:revert -d src/ormconfig.ts"
   },
   "dependencies": {
+    "@fastify/static": "^7.0.2",
+    "@fastify/view": "^9.0.0",
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.0",
@@ -31,12 +33,16 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-fastify": "^10.3.7",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
     "@types/lodash": "^4.17.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
+    "handlebars": "^4.7.8",
+    "hbs": "^4.2.0",
     "jwks-rsa": "^3.1.0",
     "mkcert": "^3.2.0",
     "passport": "^0.7.0",
